[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["bkitano <briankitano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.219"
Flask = "^2.3.2"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
